<!--
  ~ Project:  NextGIS Collector
  ~ Purpose:  Light mobile GIS for collecting data
  ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
  ~ **********************************************************************
  ~ Copyright (c) 2018-2021 NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">NextGIS Collector</string>
    <string name="error">Error</string>
    <string name="join_project">Join project</string>
    <string name="join_message">Would you like to join to project \"%1$s\"?</string>
    <string name="change_project">Change project</string>
    <string name="change_message">Are you sure you want to change the project? Current map and data will be deleted.</string>
    <string name="intro">Intro</string>
    <string name="intro_title1">Collect data with ease</string>
    <string name="intro_title2">One last word</string>
    <string name="intro_description1">Just join preferred project and start collecting the data. NextGIS Collector will define all layers you need.</string>
    <string name="intro_description2">We need the following permissions to create cloud account and sync data with web smoothly.</string>
    <string name="permission_denied">Permissions denied</string>
    <string name="requested_permissions">Application needs location permission to work properly.</string>
    <string name="by_gps">Using GPS</string>
    <string name="by_hand">Using map</string>
    <string name="add_feature">Add new feature</string>
    <string name="all_synced">All changes are synced</string>
    <string name="not_synced">You have unsynced changes</string>
    <string name="sync_changes">Changes are syncing</string>
    <string name="check_update">Checking for updates</string>
    <string name="no_updates">No updates found</string>
    <string name="update_available">Update is available</string>
    <string name="update_for">An update is available for \"%1$s\" from version %2$d to %3$d. Would you like to update now?</string>
    <string name="app_name_public">Public projects</string>
    <string name="app_name_private">Collector projects</string>
    <string name="create_new">Start your own project</string>
    <string name="no_projects">You are not yet added to any Collector project. Provide your login %1$s to a project\'s admin.</string>
    <string name="premium_url">https://nextgis.com/pricing-base</string>
    <string name="details">More</string>
    <string name="write_us">Want to start your own data collection project with NextGIS Collector? Get <a href='https://nextgis.com/pricing-base'>Premium</a></string>
    <string name="device_id">Your device ID</string>
    <string name="account_id">Your account ID</string>
    <string name="sign_out_ngid">Sign out from NextGIS</string>
    <string name="sign_out_ngid_message">>Are you sure to sign out from NextGIS? Current map and data will be deleted.</string>
    <string name="track_cloud">Tracks cloud sync</string>
    <string name="about">About</string>
    <string name="about_message">Version %1$s\nRevision %2$d\nRelease date %3$s</string>
    <string name="backup_layers">Backup data</string>
    <string name="restart_app">Please restart the app</string>
    <string name="project_version">Project version: %d</string>
    <string name="project_instance">Project URL: <a href="%1$s">%2$s</a></string>
    <string name="project_about">About project</string>
    <string name="save_log">Extended logs</string>
    <string name="share_log">Share log</string>
    <string name="refresh_projects">refresh</string>
    <string name="alert_sync_turned_off">Syncing is turned off in your system settings and currently not possible. Turn back on?</string>
    <string name="alert_sync_title">Sync:</string>
    <string name="alert_sync_error_title">Synchronization error.</string>
    <string name="alert_sync_error_message">We will try to sync again later. You can continue collecting data.\n\nIf the problem persists, create a backup. Don’t exit the project or remove the app - you will lose the data. Contact your administrator.</string>
    <string name="alert_no_trackerid_onserver_title">Send track</string>
    <string name="alert_no_trackerid_onserver">The ID tracker was not found on the server, contact the project administrator to send tracks to the cloud.\nYou will have to re-enable synchronization after repair</string>

    <string name="pref_sync_notification">Show notifications</string>

    <string name="push_perm_title">Notifications</string>
    <string name="push_perm_text">Notifications are disabled by the system, to enable them go to settings, find the application and enable notifications</string>
    <string name="push_perm_why_text">To receive notifications you need to give permissions</string>

    <string name="user_name">Username</string>
    <string name="account_email">E-mail</string>

    <string name="contacts"><a href="https://nextgis.com/contact/">Contact us</a></string>
    <string name="copyright" translatable="false"><![CDATA[© <a href=\"https://nextgis.com\">NextGIS</a>, 2012–%s]]></string>
    <string name="telegram_prompt">nextgis_talks</string>
    <string name="credits_intro">Credits</string>
    <string name="credits">Some icons used in the application are from <a href="http://icons8.com/android-icons">Icons8.com</a> licensed under a <a href="http://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0 license</a>, <a href="http://materialdesignicons.com/">materialdesignicons.com</a> and <a href="http://romannurik.github.io/AndroidAssetStudio/icons-launcher.html">romannurik.github.io</a> licensed under a <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0 license</a></string>

    <string name="action_support">Support</string>
    <string name="action_about">About</string>
    <string name="app_support">Please send us questions, bug-reports and new features suggestions. Commercial support is available.</string>
    <string name="action_help">Help</string>
    <string name="not_installed">Application not installed</string>
    <string name="tracker_details_newngw"><![CDATA[If you don\'t have a Web GIS, you can get one <a href=\"https://my.nextgis.com/signup/?next=/webgis/\">here</a>]]></string>
    <string name="tracker_details">NextGIS Collector helps collect data in the field using customized forms.</string>

    <string name="tracker_details_techsupport">Technical support</string>
    <string name="tracker_details_techsupport_url">support@nextgis.com</string>

    <string name="tracker_details_telegram">Telegram</string>
    <string name="tracker_details_telegram_url">"@nextgis_talks"</string>
    <string name="tracker_details_telegram_url_bin">"nextgis_talks"</string>
    <string name="tracker_details_allcontacts">All contacts</string>
    <string name="tracker_details_allcontacts_url">https://nextgis.com/contact</string>
    <string name="documentation">ss</string>

    <string name="documentation_title">Documentation</string>

    <string name="web">Website</string>
    <string name="web_src">https://nextgis.com/nextgis-collector/</string>
    <string name="manual_url">https://docs.nextgis.com/docs_collector/source/toc.html</string>
    <string name="out_of_area_header">Attention</string>
    <string name="out_of_area_text">The received object is outside the boundaries of the data collection project. This may mean that there are problems with obtaining accurate coordinates.</string>
    <string name="error_header">Error</string>
    <string name="error_on_check">Error on update check</string>
    <string name="project_get_error">Error on project load</string>

</resources>
