<?xml version="1.0" encoding="utf-8"?><!--
  ~ Project:  NextGIS Collector
  ~ Purpose:  Light mobile GIS for collecting data
  ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
  ~ *********************************************************************
  ~ Copyright (c) 2018, 2021 NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="sign_out"
        android:title="@string/sign_out_ngid" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="show_sync"
        android:title="@string/pref_sync_notification"/>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="track_send"
        android:enabled="false"
        android:title="@string/track_cloud" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="save_log"
        android:title="@string/save_log" />

</PreferenceScreen>